Implement method for drawing existing routes

--- a/frontend/src/app/modules/map/map.component.html
+++ b/frontend/src/app/modules/map/map.component.html
@@ -6,5 +6,5 @@
   </div>
 </div>
 <div class="absolute top-0 left-0 right-0 z-40 pointer-events-none">
-	<app-map-controls (clear)="clearMarkers()" [summary]="summary"></app-map-controls>
+	<app-map-controls (clear)="clearMarkers()" [summary]="chosenRoute?.summary"></app-map-controls>
 </div>
