--- a/frontend/src/app/modules/auth/register/register.component.html
+++ b/frontend/src/app/modules/auth/register/register.component.html
@@ -1,8 +1,12 @@
 <div class="min-h-screen h-full w-full bg-dark flex flex-col justify-center">
-  <div class="w-96 mx-auto text-left">
+  <div class="w-11/12 sm:w-96 mx-auto text-left">
+    <div class="border-4 border-white h-9 w-9 text-lg text-white text-center cursor-pointer
+    transition hover:-translate-x-1 mb-2" routerLink="/">
+      <fa-icon [icon]="faChevronLeft" class=""></fa-icon>
+    </div>
     <h1 class="text-3xl font-bold text-white">Create an account</h1>
 
-    <div class="flex flex-col gap-y-6 my-10 tracking-wide">
+    <div class="flex flex-col gap-y-6 mt-10 mb-12 tracking-wide">
       <div class="w-full">
         <label class="block tracking-wide text-light text-xs font-bold mb-1"
         for="register-email">
