--- a/frontend/src/app/modules/auth/register/register.component.html
+++ b/frontend/src/app/modules/auth/register/register.component.html
@@ -6,6 +6,7 @@
     </div>
     <h1 class="text-3xl font-bold text-white">Create an account</h1>
 
+    <form [formGroup]="registerForm">
     <div class="flex flex-col gap-y-6 mt-10 mb-12 tracking-wide">
       <div class="w-full">
         <label class="block tracking-wide text-light text-xs font-bold mb-1"
@@ -15,8 +16,16 @@
         <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
         placeholder-light caret-light border-b border-light focus:border-accent-light
         bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-        id="register-email" type="text" placeholder="Your E-Mail Address" autofocus="autofocus">
-        <!-- <p class="text-red-500 text-xs italic">Please fill out this field.</p> -->
+        id="register-email" type="text" placeholder="Your E-Mail Address" autofocus="autofocus"
+        formControlName="email">
+        <div class="h-1">
+          <p *ngIf="email && email.invalid && email.touched"
+            class="text-yellow-400 text-xs italic">
+            {{
+              email.errors?.['required'] ? 'Email is required.' :  email.errors?.['pattern'] ? 'Email is not valid.' : ''
+            }}
+          </p>
+        </div>
       </div>
 
       <div class="flex justify-between gap-x-4">
@@ -28,8 +37,16 @@
           <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-          id="register-first-name" type="text" placeholder="Your First Name">
-          <!-- <p class="text-red-500 text-xs italic">Please fill out this field.</p> -->
+          id="register-first-name" type="text" placeholder="Your First Name" formControlName="name">
+          <div class="h-1">
+            <p *ngIf="name && name.invalid && name.touched"
+              class="text-yellow-400 text-xs italic">
+              {{
+                name.errors?.['required'] ? 'First name is required.' :  name.errors?.['minlength'] ?
+                'First name is too short.' : name.errors?.['maxlength'] ? 'First name is too long.' : ''
+              }}
+            </p>
+          </div>
         </div>
   
         <div class="w-full">
@@ -40,8 +57,16 @@
           <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-          id="register-last-name" type="text" placeholder="Your Last Name">
-          <!-- <p class="text-red-500 text-xs italic">Please fill out this field.</p> -->
+          id="register-last-name" type="text" placeholder="Your Last Name" formControlName="surname">
+          <div class="h-1">
+            <p *ngIf="surname && surname.invalid && surname.touched"
+              class="text-yellow-400 text-xs italic">
+              {{
+                surname.errors?.['required'] ? 'Last name is required.' :  surname.errors?.['minlength'] ?
+                'Last name is too short.' : surname.errors?.['maxlength'] ? 'Last name is too long.' : ''
+              }}
+            </p>
+          </div>
         </div>
       </div>
 
@@ -53,8 +78,15 @@
         <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
         placeholder-light caret-light border-b border-light focus:border-accent-light
         bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-        id="register-password" type="password" placeholder="Your Password">
-        <!-- <p class="text-red-500 text-xs italic">Please fill out this field.</p> -->
+        id="register-password" type="password" placeholder="Your Password" formControlName="password">
+        <div class="h-1">
+          <p *ngIf="password && password.invalid && password.touched"
+            class="text-yellow-400 text-xs italic">
+            {{
+              password.errors?.['required'] ? 'Password is required.' :  password.errors?.['minlength'] ? 'Password is too short.' : ''
+            }}
+          </p>
+        </div>
       </div>
 
       <div class="w-full">
@@ -65,14 +97,21 @@
         <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
         placeholder-light caret-light border-b border-light focus:border-accent-light
         bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-        id="register-confirm-password" type="password" placeholder="Confirm Your Password">
-        <!-- <p class="text-red-500 text-xs italic">Please fill out this field.</p> -->
+        id="register-confirm-password" type="password" placeholder="Confirm Your Password" formControlName="confirmPassword">
+        <div class="h-1">
+          <p *ngIf="password && confirmPassword && registerForm.hasError('notSame') && password.valid"
+            class="text-yellow-400 text-xs italic">
+            Passwords do not match.
+          </p>
+        </div>
       </div>
-  </div>
+    </div>
 
-  <button class="w-full h-16 bg-accent-light active:bg-accent text-white font-medium tracking-wide">
+  <button type="submit" class="w-full h-16 bg-accent-light active:bg-accent text-white font-medium tracking-wide">
     REGISTER
   </button>
+  </form>
+
   <div class="text-light text-sm text-center mt-6">
     Already have an account?
     <span class="text-accent-light cursor-pointer"><a routerLink="/login">Log In</a></span>
