Change driver profile margins

--- a/frontend/src/app/modules/user/profile/profile.component.html
+++ b/frontend/src/app/modules/user/profile/profile.component.html
@@ -5,7 +5,8 @@
       <fa-icon [icon]="faChevronLeft" class=""></fa-icon>
     </div>
   </div>
-  <div class="w-11/12 sm:w-96 mx-auto text-center">
+
+  <div class="w-11/12 sm:w-132 mx-auto text-center border border-stone-500 rounded-lg py-16 px-4 sm:p-16 my-20">
 
     <!-- main info -->
     <div>
