Handle non-existent drivers

--- a/frontend/src/app/modules/user/profile/driver-page/driver-page.component.html
+++ b/frontend/src/app/modules/user/profile/driver-page/driver-page.component.html
@@ -7,4 +7,9 @@
   </div>
 
   <app-driver [driver]="driver"></app-driver>
+  <div *ngIf="notFound" class="w-11/12 sm:w-120 mx-auto text-center border
+  border-stone-500 rounded-lg py-16 px-4 sm:p-16 my-20 text-stone-500
+  font-bold text-2xl">
+    Driver with this username does not exist.
+  </div>
 </div>
