--- a/frontend/src/app/modules/user/profile/driver-profile/driver-profile.component.html
+++ b/frontend/src/app/modules/user/profile/driver-profile/driver-profile.component.html
@@ -1,88 +1,74 @@
-<div *ngIf="driver" class="w-11/12 sm:w-132 mx-auto text-center border border-stone-500 rounded-lg py-16 px-4 sm:p-16 my-20">
+<div *ngIf="driver" class="w-11/12 sm:w-132 mx-auto text-center my-6">
 
-  <!-- main info -->
-  <div>
-    <!-- image -->
-    <div class="relative h-28 w-28 mx-auto">
-      <img src="/assets/images/placeholders/taxi-driver.jpg" alt=""
-      class="rounded-full">
-      <span class="absolute bottom-1 right-1 h-6 w-6">
-        <span class="relative flex w-6 h-6 bg-dark rounded-full text-center">
-          <span *ngIf="driver.active" class="absolute inline-flex w-4 h-4 top-1 left-1 bg-accent-light rounded-full animate-ping my-auto mx-auto"></span>
-          <span class="relative inline-flex rounded-full h-4 w-4 my-auto mx-auto" [ngClass]="driver.active ? 'bg-accent-light' : 'bg-light'"></span>
-        </span>
-      </span>
-    </div>
+  <div class="lg:hidden mb-2 text-left">
 
-    <div class="mt-2 text-gray-50 text-2xl tracking-tight leading-5">
-      {{ driver.name }} {{ driver.surname }}
-    </div>
-    <div class="mt-0 text-light text-xs tracking-widest font-medium uppercase">
-     {{ driver.city }}
+    <div class="hidden sm:flex gap-x-2">
+      <button class="py-3 px-8 border border-stone-500 text-stone-400
+      hover:bg-stone-500 hover:text-stone-300 rounded-lg"
+      [ngClass]="selectedView === 'details' ? 'bg-stone-500 text-stone-300' : ''"
+      (click)="selectedView = 'details'">
+        Details
+      </button>
+
+      <button class="py-3 px-8 border border-stone-500 text-stone-400
+      hover:bg-stone-500 hover:text-stone-300 rounded-lg"
+      [ngClass]="selectedView === 'reviews' ? 'bg-stone-500 text-stone-300' : ''"
+      (click)="selectedView = 'reviews'">
+        Reviews
+      </button>
     </div>
 
-    <div class="flex justify-center gap-x-1 mt-1">
-      <div class="text-light text-sm">
-        <span class="text-light text-base">&#9733;
-          {{ getDriverRating() }} <span>·</span> {{ driver.numberOfReviews }} ratings
-        </span>
-    </div>
-    </div>
+    <div class="relative block w-fit sm:hidden">
+      <button class="border border-stone-500 text-stone-400 py-2 px-4
+      hover:bg-stone-500 hover:text-stone-300 rounded-lg" (click)="showDropdown = !showDropdown">
+        <fa-icon [icon]="faBars"></fa-icon>
+      </button>
 
+      <div *ngIf="showDropdown" class="absolute z-20 -right-56 top-0 rounded-lg bg-stone-500
+      w-52 p-2 flex flex-col gap-y-2 font-bold">
+
+        <button class="py-3 px-8 border border-dark 
+        hover:bg-dark hover:text-stone-300 rounded-lg w-full"
+        [ngClass]="selectedView === 'details' ? 'bg-dark text-stone-300' : 'text-dark'"
+        (click)="selectedView = 'details'">
+          Details
+        </button>
+
+        <button class="py-3 px-8 border border-dark 
+        hover:bg-dark hover:text-stone-300 rounded-lg w-full"
+        [ngClass]="selectedView === 'reviews' ? 'bg-dark text-stone-300' : 'text-dark'"
+        (click)="selectedView = 'reviews'">
+          Reviews
+        </button>
+
+      </div>
+
+    </div>
+    
   </div>
 
-  <!-- ride stats -->
-  <div class="flex h-14 border mt-3 border-stone-500 rounded-lg">
+  <div class="relative border h-180 border-stone-500 rounded-lg py-16 px-4 sm:p-16">
 
-    <div class="flex border-r border-stone-500 border-dashed w-1/2 shrink-0">
-      <div class="my-auto px-4 shrink-0">
-        <fa-icon [icon]="faCar" class="text-white"></fa-icon>
-      </div>
-      <div class="my-auto text-left shrink-0">
-        <div class="text-sm text-white font-medium">{{ driver.ridesCompleted }}</div>
-        <div class="text-xs text-light">Rides Completed</div>
-      </div>
+    <!-- controls -->
+    <div class="absolute hidden lg:-right-32 lg:top-0 lg:flex lg:flex-col lg:gap-y-2 gap-x-2">
+
+      <button class="py-3 px-8 border border-stone-500 text-stone-400
+      hover:bg-stone-500 hover:text-stone-300 rounded-lg"
+      [ngClass]="selectedView === 'details' ? 'bg-stone-500 text-stone-300' : ''"
+      (click)="selectedView = 'details'">
+        Details
+      </button>
+
+      <button class="py-3 px-8 border border-stone-500 text-stone-400
+      hover:bg-stone-500 hover:text-stone-300 rounded-lg"
+      [ngClass]="selectedView === 'reviews' ? 'bg-stone-500 text-stone-300' : ''"
+      (click)="selectedView = 'reviews'">
+        Reviews
+      </button>
+      
     </div>
 
-    <div class="flex w-1/2 shrink-0">
-      <div class="my-auto px-4 shrink-0">
-        <fa-icon [icon]="faPaperPlane" class="text-white"></fa-icon>
-      </div>
-      <div class="my-auto text-left shrink-0">
-        <div class="text-sm text-white font-medium">{{ getDistanceTravelled() }} km</div>
-        <div class="text-xs text-light">Distance Travelled</div>
-      </div>
-    </div>
-
-  </div>
-
-  <!-- car info -->
-  <div class="flex-col my-10">
-    <img [src]="getCarImage()" class="w-20 fill-gray-300 mx-auto" title="Coupe"/>
-    <div>
-      <span class="text-light text-sm">{{ driver.vehicle.make }} · {{ driver.vehicle.model }} · {{ driver.vehicle.colour }}</span>
-    </div>
-    <div class="flex justify-center gap-x-3 text-xl">
-      <fa-icon *ngIf="driver.vehicle.babySeat" [icon]="faBabyCarriage" class="text-light" title="Has baby seat"></fa-icon>
-      <fa-icon *ngIf="driver.vehicle.petsAllowed" [icon]="faPaw" class="text-light" title="Pet friendly"></fa-icon>
-    </div>
-  </div>
-
-  <!-- reviews button -->
-  <div class="mt-2">
-    <button class="py-3 px-8 border border-stone-500 text-stone-400
-    hover:bg-stone-500 hover:text-stone-300 rounded-lg">Reviews</button>
-  </div>
-
-  <!-- phone number -->
-  <div class="flex h-12 w-fit border-b border-stone-500 mt-10 mx-auto">
-
-    <div class="my-auto px-4 shrink-0 text-xl">
-      <fa-icon [icon]="faMobileRetro" class="text-gray-50"></fa-icon>
-    </div>
-    <div class="my-auto text-left pr-4 shrink-0">
-      <div class="text-sm text-gray-50 font-medium">{{ driver.phoneNumber }}</div>
-    </div>
-
+    <app-driver-details *ngIf="selectedView === 'details'" [driver]="driver"></app-driver-details>
+    <app-driver-reviews *ngIf="selectedView === 'reviews'" [driver]="driver"></app-driver-reviews>
   </div>
 </div>
