--- a/frontend/src/app/modules/user/profile/account.component.html
+++ b/frontend/src/app/modules/user/profile/account.component.html
@@ -14,6 +14,10 @@
     <app-passenger-profile [passenger]="getPassenger()" class="h-full"></app-passenger-profile>
   </div>
 
+  <div *ngIf="account && account.accountType === 'admin'" class="h-full">
+    <app-admin-profile [admin]="getAdmin()" class="h-full"></app-admin-profile>
+  </div>
+
   <div *ngIf="notFound" class="w-11/12 sm:w-120 mx-auto text-center border
   border-stone-500 rounded-lg py-16 px-4 sm:p-16 my-20 text-stone-500
   font-bold text-2xl">
