--- a/frontend/src/app/modules/map/map-controls/map-controls.component.html
+++ b/frontend/src/app/modules/map/map-controls/map-controls.component.html
@@ -10,16 +10,29 @@
         <fa-icon [icon]="faBars" class=""></fa-icon>
       </div>
 
-      <div class="flex flex-col justify-center text-center text-xl my-auto rounded-full font-medium">
+      <div *ngIf="accountType !== 'driver'" class="flex flex-col justify-center text-center text-xl my-auto rounded-full font-medium">
         Suber
       </div>
 
-      <!-- profile / register -->
-        <div routerLink="/register" class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
-        rounded-full cursor-pointer hover:bg-gray-100">
-          <fa-icon [icon]="faArrowRightToBracket" class=""></fa-icon>
+      <!-- activity -->
+      <div *ngIf="accountType === 'driver'"
+      class="flex flex-col justify-center relative h-11 my-auto w-60 rounded-full mx-auto
+      text-center text-xl font-medium tracking-wider pointer-events-auto select-none cursor-pointer"
+      [ngClass]="isActive ? 'bg-accent' : 'bg-red-500'" (click)="toggleActivity()">
+        <div class="absolute top-0 left-0 w-full h-full rounded-full"
+        [ngClass]="isActive ? 'bg-accent-light  animate-pulse' : 'bg-transparent animate-none'">
+
         </div>
+        <p class="animate-none text-emerald-50 z-10">{{ isActive ? 'ACTIVE' : 'INACTIVE' }}</p>
+      </div>
+
+      <!-- profile / register -->
+      <div routerLink="/register" class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
+      rounded-full cursor-pointer hover:bg-gray-100">
+        <fa-icon [icon]="faArrowRightToBracket" class=""></fa-icon>
+      </div>
     </div>
+
   </div>
 
   <!-- clear markers button -->
