--- a/frontend/src/app/modules/map/map-controls/map-controls.component.html
+++ b/frontend/src/app/modules/map/map-controls/map-controls.component.html
@@ -16,9 +16,9 @@
 
       <!-- activity -->
       <div *ngIf="accountType === 'driver' && isActive !== null"
-      class="flex flex-col justify-center relative h-11 my-auto w-60 rounded-full mx-auto
+      class="flex flex-col justify-center relative h-11 my-auto w-56 rounded-full mx-auto
       text-center text-xl font-medium tracking-wider pointer-events-auto select-none cursor-pointer"
-      [ngClass]="isActive ? 'bg-accent' : 'bg-red-500'" (click)="toggleActivity()">
+      [ngClass]="isActive ? 'bg-accent' : 'bg-light'" (click)="toggleActivity()">
         <div class="absolute top-0 left-0 w-full h-full rounded-full"
         [ngClass]="isActive ? 'bg-accent-light  animate-pulse' : 'bg-transparent animate-none'">
 
@@ -26,11 +26,21 @@
         <p class="animate-none text-white z-10">{{ isActive ? 'ACTIVE' : 'INACTIVE' }}</p>
       </div>
 
-      <!-- profile / register -->
-      <div routerLink="/register" class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
+      <!-- register -->
+      <div *ngIf="accountType === 'anonymous'" routerLink="/register"
+      class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
       rounded-full cursor-pointer hover:bg-gray-100">
         <fa-icon [icon]="faArrowRightToBracket" class=""></fa-icon>
       </div>
+
+      <!-- profile -->
+      <div *ngIf="accountType !== 'anonymous'" routerLink="/account"
+      class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
+      rounded-full cursor-pointer hover:bg-gray-100 border border-dark">
+        <img src="/assets/images/placeholders/taxi-driver.jpg" alt="" class="w-11 h-11 rounded-full">
+      </div>
+
+
     </div>
 
   </div>
