--- a/frontend/src/app/modules/map/map-controls/map-controls.component.html
+++ b/frontend/src/app/modules/map/map-controls/map-controls.component.html
@@ -2,47 +2,10 @@
 
   <!-- top controls -->
   <div class="absolute left-0 right-0 top-0">
-    <div class="flex justify-between w-11/12 sm:w-88 h-14 px-2 mt-5 mx-auto bg-white
-    rounded-full shadow-md pointer-events-auto select-none">
-      <!-- menu -->
-      <div class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
-      rounded-full cursor-pointer hover:bg-gray-100">
-        <fa-icon [icon]="faBars" class=""></fa-icon>
-      </div>
-
-      <div *ngIf="accountType !== 'driver'" class="flex flex-col justify-center text-center text-xl my-auto rounded-full font-medium">
-        Suber
-      </div>
-
-      <!-- activity -->
-      <div *ngIf="accountType === 'driver' && isActive !== null"
-      class="flex flex-col justify-center relative h-11 my-auto w-56 rounded-full mx-auto
-      text-center text-xl font-medium tracking-wider pointer-events-auto select-none cursor-pointer"
-      [ngClass]="isActive ? 'bg-accent' : 'bg-light'" (click)="toggleActivity()">
-        <div class="absolute top-0 left-0 w-full h-full rounded-full"
-        [ngClass]="isActive ? 'bg-accent-light  animate-pulse' : 'bg-transparent animate-none'">
-
-        </div>
-        <p class="animate-none text-white z-10">{{ isActive ? 'ACTIVE' : 'INACTIVE' }}</p>
-      </div>
-
-      <!-- register -->
-      <div *ngIf="accountType === 'anonymous'" routerLink="/register"
-      class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
-      rounded-full cursor-pointer hover:bg-gray-100">
-        <fa-icon [icon]="faArrowRightToBracket" class=""></fa-icon>
-      </div>
-
-      <!-- profile -->
-      <div *ngIf="accountType !== 'anonymous'" routerLink="/account"
-      class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
-      rounded-full cursor-pointer hover:bg-gray-100 border border-dark">
-        <img src="/assets/images/placeholders/taxi-driver.jpg" alt="" class="w-11 h-11 rounded-full">
-      </div>
-
-
-    </div>
-
+    <app-top-controls
+    [sharedInfo]="{ accountType: accountType }"
+    [driverInfo]="{ isActive: isActive }"
+    ></app-top-controls>
   </div>
 
   <!-- clear markers button -->
