Refactor map component

--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="sharedInfo && driverInfo">
+<div>
   <div class="flex justify-between gap-x-2 sm:gap-x-0 w-11/12 sm:w-88 h-14 px-2 mt-5 mx-auto bg-white
     rounded-full shadow-md pointer-events-auto select-none">
       <!-- menu -->
