--- a/frontend/src/app/modules/main/map-controls/map-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/map-controls.component.html
@@ -1,10 +1,11 @@
 <div class="w-full min-h-screen">
 
   <!-- top controls -->
-  <div class="absolute left-0 right-0 top-0">
+  <div *ngIf="sharedInfo && driverInfo"
+  class="absolute left-0 right-0 top-0">
     <app-top-controls
-    [sharedInfo]="{ accountType: accountType }"
-    [driverInfo]="{ isActive: isActive }"
+    [sharedInfo]="sharedInfo"
+    [driverInfo]="driverInfo"
     ></app-top-controls>
   </div>
 
