--- a/frontend/src/app/modules/main/main.component.html
+++ b/frontend/src/app/modules/main/main.component.html
@@ -13,7 +13,11 @@
     [sharedInfo]="{ accountType: accountType }"
     [driverInfo]="{ isActive: isActive }"
     >
-  </app-map-controls>
+    </app-map-controls>
+  </div>
+
+  <div *ngIf="mapComponent" class="absolute h-full z-40 left-0 top-0">
+    <app-order-menu></app-order-menu>
   </div>
 
 </div>
