--- a/frontend/src/app/modules/main/map-controls/map-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/map-controls.component.html
@@ -11,15 +11,15 @@
 
   <!-- clear markers button -->
   <div *ngIf="summary" class="absolute left-0 bottom-0">
-    <div class="w-14 h-14 m-5 bg-white rounded-full pointer-events-auto cursor-pointer
+    <div class="w-14 h-14 m-5 bg-dark rounded-full pointer-events-auto cursor-pointer
     shadow-md transition translate-y-1 hover:scale-105 active:scale-100" (click)="clearMarkers()">
-      <img src="assets/icons/map-marker-minus.png" alt="Clear markers icon" class="p-3">
+      <img src="assets/icons/map-marker-minus-white.png" alt="Clear markers icon" class="p-3">
     </div>
   </div>
 
-  <!-- clear markers button -->
+  <!-- summary -->
   <div *ngIf="summary" class="absolute right-0 bottom-0">
-    <div class="text-center m-5 px-4 py-2 bg-white rounded-full shadow-md font-medium text-accent">
+    <div class="text-center m-5 px-4 py-2 bg-dark rounded-full shadow-md font-medium text-white">
       {{ (summary.totalDistance / 1000).toLocaleString('fullwide', {minimumFractionDigits:2, maximumFractionDigits:2}) }} km
     </div>
   </div>
