--- a/frontend/src/app/modules/main/main.component.html
+++ b/frontend/src/app/modules/main/main.component.html
@@ -17,7 +17,7 @@
   </div>
 
   <div *ngIf="mapComponent" class="absolute h-full z-40 left-0 top-0">
-    <app-order-menu [chosenRoute]="chosenRoute"></app-order-menu>
+    <app-order-menu [waypoints]="waypoints"></app-order-menu>
   </div>
 
 </div>
