--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -3,30 +3,53 @@
   <div *ngIf="isOpened" class="flex flex-col w-120 bg-dark py-8 px-10">
     <h1 class="text-3xl font-bold text-gray-50">Order a ride</h1>
 
+    <h3 class="text-xl font-medium text-light">Route</h3>
     <div *ngIf="waypoints" class="flex flex-col gap-y-3 mt-6 max-h-72 overflow-auto">
       <div *ngFor="let waypoint of waypoints; let i=index;">
-        <div class="flex gap-x-4">
+        <div class="flex w-full justify-between">
           
-          <div class="relative flex flex-col justify-center h-10 w-10 shrink-0 text-accent-light
-          rounded-full text-center">
-            <p *ngIf="i > 0"
-              class="absolute -top-4 w-full text-center mx-auto font-extrabold">·</p>
-            <fa-icon [icon]="getIcon(i)" class="mx-auto" [ngClass]="i === 0 ? 'text-base' : 'text-xl'"></fa-icon>
-            <p *ngIf="i < waypoints.length - 1"
-            class="absolute -bottom-4 w-full text-center mx-auto font-extrabold">·</p>
+          <div class="flex grow gap-x-4">
+            <div class="relative flex flex-col justify-center h-10 w-10 shrink-0 text-accent-light
+            rounded-full text-center select-none">
+              <p *ngIf="i > 0"
+                class="absolute -top-4 w-full text-center mx-auto font-extrabold">·</p>
+              <fa-icon [icon]="getIcon(i)" class="mx-auto" [ngClass]="i === 0 ? 'text-base' : 'text-xl'"></fa-icon>
+              <p *ngIf="i < waypoints.length - 1"
+              class="absolute -bottom-4 w-full text-center mx-auto font-extrabold">·</p>
+            </div>
+            
+            <div class="flex flex-col">
+              <div class="text-lg font-medium text-gray-50">{{ i === 0 ? 'Pick Up' : i === waypoints.length - 1 ? 'Drop Off' : 'Stop ' + i }}</div>
+              <div class="text-sm font-medium text-light">
+                {{ waypoint.raw.address.road ? waypoint.raw.address.road + (waypoint.raw.address.house_number ? ' ' + waypoint.raw.address.house_number : '') + ', ' : '' }}
+                {{ waypoint.raw.address.quarter ? waypoint.raw.address.quarter + ', ' : '' }}{{ waypoint.raw.address.city_district }}
+                </div>
+            </div>
           </div>
-          
-          <div class="flex flex-col">
-            <div class="text-lg font-medium text-gray-50">{{ i === 0 ? 'Pick Up' : i === waypoints.length - 1 ? 'Drop Off' : 'Stop ' + i }}</div>
-            <div class="text-sm font-medium text-light">
-              {{ waypoint.raw.address.road ? waypoint.raw.address.road + (waypoint.raw.address.house_number ? ' ' + waypoint.raw.address.house_number : '') + ', ' : '' }}
-              {{ waypoint.raw.address.quarter ? waypoint.raw.address.quarter + ', ' : '' }}{{ waypoint.raw.address.city_district }}
-              </div>
-          </div>
+
+          <button class="grow-0 w-10 h-10 my-auto p-1 text-gray-50 hover:text-accent-light mx-auto"
+          (click)="removeStop(i)">
+            <fa-icon [icon]="faXmark"></fa-icon>
+          </button>
 
         </div>
       </div>
     </div>
+
+    <!-- add new stop -->
+    
+    <div class="flex" [ngClass]="waypoints.length > 0 ? 'mt-4' : 'mt-0'">
+      <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+      placeholder-light caret-light border-b border-light focus:border-accent-light
+      bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+      type="text" placeholder="Add a stop" [(ngModel)]="newStopQuery" (keydown.enter)="addStop()">
+
+      <button (click)="addStop()"
+      class="px-2 py-1 text-gray-50 hover:text-accent-light mx-auto">
+        <fa-icon [icon]="faPlus"></fa-icon>
+      </button>
+    </div>
+
   </div>
 
   <div class="flex flex-col justify-center h-32 w-8 bg-dark
