--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -3,7 +3,6 @@
   <div *ngIf="isOpened" class="flex flex-col w-120 bg-dark py-8 px-10">
     <h1 class="text-3xl font-bold text-gray-50">Order a ride</h1>
 
-    <h3 class="text-xl font-medium text-light">Route</h3>
     <div *ngIf="waypoints" class="flex flex-col gap-y-3 mt-6 max-h-72 overflow-auto">
       <div *ngFor="let waypoint of waypoints; let i=index;">
         <div class="flex w-full justify-between">
@@ -43,7 +42,8 @@
       <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
       placeholder-light caret-light border-b border-light focus:border-accent-light
       bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-      type="text" placeholder="Add a stop" [(ngModel)]="newStopQuery" (keydown.enter)="addStop()">
+      type="text" [(ngModel)]="newStopQuery" (keydown.enter)="addStop()"
+      [placeholder]="waypoints.length === 0 ? 'Add the starting point' : 'Add a destination'">
 
       <button (click)="addStop()"
       class="px-2 py-1 text-gray-50 hover:text-accent-light mx-auto">
