--- a/frontend/src/app/modules/main/main.component.html
+++ b/frontend/src/app/modules/main/main.component.html
@@ -15,7 +15,12 @@
   </div>
 
   <div *ngIf="mapComponent" class="absolute h-full z-40 left-0 top-0">
-    <app-order-menu [waypoints]="waypoints" (stopAdded)="addNewStop($event)" (stopRemoved)="removeStop($event)"></app-order-menu>
+    <app-order-menu
+    [waypoints]="waypoints"
+    [summary]="summary"
+    (stopAdded)="addNewStop($event)"
+    (stopRemoved)="removeStop($event)"
+    ></app-order-menu>
   </div>
 
 </div>
