Implement ride price calculator

--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -37,8 +37,8 @@
       class="relative block my-auto">
         <!-- profile -->
         <div (click)="showProfileDropdown = !showProfileDropdown; clickedProfileDropdown = true;"
-        class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
-        rounded-full cursor-pointer hover:text-light shadow-sm border border-gray-300">
+        class="flex flex-col justify-center text-center text-xl w-10 h-10 my-auto
+        rounded-full cursor-pointer hover:text-light shadow-sm">
           <img src="/assets/images/placeholders/taxi-driver.jpg" alt="" class="w-11 h-11 rounded-full">
         </div>
 
