--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       
-      <div class="flex justify-center font-medium text-sm text-gray-50 mt-2">
+      <div *ngIf="calculateRidePrice() > 0" class="flex justify-center font-medium text-sm text-gray-50 mt-2">
         <div class="flex gap-x-1.5">
           <fa-icon [icon]="faHandHoldingUsd"></fa-icon>
           <span>{{ calculateRidePrice() }}<b class="font-black text-accent-light">&nbsp;T</b></span>
