--- a/frontend/src/app/modules/main/order-menu/order-menu.component.css
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.css
@@ -26,3 +26,32 @@
     transform: translateX(0%);
   }
 }
+
+.slide-in-bottom {
+  animation: slide-in-bottom .4s ease-out forwards;
+}
+
+@keyframes slide-in-bottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+.slide-out-bottom {
+  animation: slide-out-bottom .4s ease-out forwards;
+}
+
+@keyframes slide-out-bottom {
+  0% {
+    transform: translateY(0%);
+  }
+  75% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
